samples/_failures_safe/1761347867_d0802a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6aada28.c: In function ‘main’:
./samples/SAFE/__tmp_e6aada28.c:130:9: error: expected expression at end of input
  130 |         int matA[
      |         ^~~
./samples/SAFE/__tmp_e6aada28.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6aada28.c:130:9: error: expected declaration or statement at end of input
